--- a/notebooks/01_fwf_inspect.ipynb
+++ b/notebooks/01_fwf_inspect.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -321,97 +321,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "timestamp: 15232594729\n",
+      "timestamp: 15232999632\n",
       "channels {\n",
       "  channel: 0\n",
       "  sampleUnit: 1.0\n",
       "  waveSegment {\n",
-      "    durationFromAnchor: -12.999341011047363\n",
-      "    echo: 4\n",
-      "    echo: 2\n",
-      "    echo: 1\n",
+      "    durationFromAnchor: -11.000725746154785\n",
       "    echo: 1\n",
       "    echo: 2\n",
+      "    echo: 1\n",
       "    echo: 2\n",
       "    echo: 2\n",
-      "    echo: 2\n",
-      "    echo: 7\n",
-      "    echo: 25\n",
-      "    echo: 63\n",
-      "    echo: 121\n",
-      "    echo: 174\n",
+      "    echo: 3\n",
+      "    echo: 9\n",
+      "    echo: 31\n",
+      "    echo: 73\n",
+      "    echo: 134\n",
+      "    echo: 180\n",
       "    echo: 191\n",
-      "    echo: 163\n",
-      "    echo: 109\n",
-      "    echo: 59\n",
-      "    echo: 28\n",
-      "    echo: 12\n",
-      "    echo: 6\n",
+      "    echo: 155\n",
+      "    echo: 99\n",
+      "    echo: 52\n",
+      "    echo: 23\n",
+      "    echo: 10\n",
+      "    echo: 5\n",
       "    echo: 4\n",
+      "    echo: 6\n",
+      "    echo: 6\n",
       "    echo: 5\n",
-      "    echo: 7\n",
-      "    echo: 5\n",
+      "    echo: 2\n",
+      "    echo: 1\n",
       "  }\n",
       "}\n",
       "channels {\n",
       "  channel: 1\n",
       "  sampleUnit: 1.0\n",
       "  waveSegment {\n",
-      "    durationFromAnchor: -231.46734619140625\n",
+      "    durationFromAnchor: -201.4664306640625\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 1\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
       "    echo: 2\n",
       "    echo: 3\n",
       "    echo: 2\n",
-      "    echo: 2\n",
-      "    echo: 2\n",
-      "    echo: 2\n",
+      "    echo: 3\n",
       "    echo: 2\n",
       "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 4\n",
+      "    echo: 8\n",
+      "    echo: 31\n",
+      "    echo: 77\n",
+      "    echo: 142\n",
+      "    echo: 196\n",
+      "    echo: 209\n",
+      "    echo: 178\n",
+      "    echo: 118\n",
+      "    echo: 63\n",
+      "    echo: 29\n",
+      "    echo: 15\n",
+      "    echo: 11\n",
+      "    echo: 8\n",
+      "    echo: 8\n",
       "    echo: 8\n",
       "    echo: 11\n",
       "    echo: 12\n",
       "    echo: 10\n",
+      "    echo: 9\n",
+      "    echo: 9\n",
       "    echo: 6\n",
+      "    echo: 7\n",
+      "    echo: 7\n",
+      "    echo: 7\n",
+      "    echo: 7\n",
+      "    echo: 7\n",
+      "    echo: 6\n",
+      "    echo: 6\n",
+      "    echo: 5\n",
+      "    echo: 6\n",
+      "    echo: 6\n",
+      "    echo: 6\n",
+      "    echo: 5\n",
+      "    echo: 4\n",
+      "    echo: 4\n",
       "    echo: 3\n",
       "    echo: 4\n",
-      "    echo: 2\n",
-      "    echo: 3\n",
-      "    echo: 2\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 2\n",
-      "    echo: 2\n",
-      "    echo: 2\n",
-      "    echo: 1\n",
-      "    echo: 2\n",
-      "    echo: 2\n",
-      "    echo: 2\n",
-      "    echo: 1\n",
-      "    echo: 1\n",
-      "    echo: 0\n",
-      "    echo: 1\n",
-      "    echo: 1\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
-      "    echo: 3\n",
       "    echo: 4\n",
       "    echo: 3\n",
       "    echo: 3\n",
@@ -419,26 +421,91 @@
       "    echo: 3\n",
       "    echo: 3\n",
       "    echo: 3\n",
+      "    echo: 3\n",
       "    echo: 2\n",
-      "    echo: 2\n",
-      "    echo: 1\n",
-      "    echo: 2\n",
-      "    echo: 2\n",
+      "    echo: 3\n",
       "    echo: 3\n",
       "  }\n",
       "}\n",
-      "anchorX: 3394302\n",
-      "anchorY: -309915\n",
-      "anchorZ: 1131054\n",
-      "targetX: 3321956\n",
-      "targetY: -317092\n",
-      "targetZ: 1000017\n",
+      "channels {\n",
+      "  channel: 2\n",
+      "  sampleUnit: 1.0\n",
+      "  waveSegment {\n",
+      "    durationFromAnchor: -200.1935272216797\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 3\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 5\n",
+      "    echo: 11\n",
+      "    echo: 23\n",
+      "    echo: 37\n",
+      "    echo: 44\n",
+      "    echo: 40\n",
+      "    echo: 29\n",
+      "    echo: 17\n",
+      "    echo: 7\n",
+      "    echo: 3\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 3\n",
+      "    echo: 3\n",
+      "    echo: 3\n",
+      "    echo: 3\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 1\n",
+      "    echo: 2\n",
+      "    echo: 2\n",
+      "    echo: 1\n",
+      "    echo: 1\n",
+      "    echo: 1\n",
+      "    echo: 1\n",
+      "    echo: 1\n",
+      "    echo: 2\n",
+      "  }\n",
+      "}\n",
+      "anchorX: 3394589\n",
+      "anchorY: -280332\n",
+      "anchorZ: 1130818\n",
+      "targetX: 3325706\n",
+      "targetY: -286597\n",
+      "targetZ: 997881\n",
       "firstReturningSample: 0\n",
       "lastReturningSample: 0\n",
-      "pulseDescriptorIndex: 2\n",
+      "pulseDescriptorIndex: 3\n",
       "edgeOfScanLine: false\n",
       "scanDirection: false\n",
-      "mirroFacet: 2\n",
+      "mirroFacet: 0\n",
       "intensity: 0\n",
       "classification: 0\n",
       "\n"
@@ -446,7 +513,7 @@
     }
    ],
    "source": [
-    "n = 2\n",
+    "n = 3\n",
     "idx=num_samplings_per_pulse.index[num_samplings_per_pulse==n]\n",
     "pls = pw_list.pulse[idx[0]]\n",
     "print(pls)"
@@ -462,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -498,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
