align fwf and pcloud

--- a/notebooks/01_pwmsg-d15.ipynb
+++ b/notebooks/01_pwmsg-d15.ipynb
@@ -997,7 +997,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
