various minor fixes

--- a/notebooks/06_fwf_pc_alignment-d15.ipynb
+++ b/notebooks/06_fwf_pc_alignment-d15.ipynb
@@ -414,7 +414,7 @@
    "source": [
     "### Conclusion\n",
     "\n",
-    "The alignment is clear for most of the pulses when looking at the elevation (z) values."
+    "The alignment is clear for most of the pulses."
    ]
   }
  ],
