--- a/notebooks/06_fwf_pc_alignment.ipynb
+++ b/notebooks/06_fwf_pc_alignment.ipynb
@@ -445,7 +445,7 @@
    "source": [
     "### The ultimate file parsing check\n",
     "\n",
-    "I can confirm the fields are parsed correctly. Parsing the same pulse using [PulseTools](https://github.com/PulseWaves/PulseWaves/tree/master/PulseTools), the tool provided by the author of the PulseWaves format, yields the same results.\n",
+    "Triple check the file parsing using [PulseTools](https://github.com/PulseWaves/PulseWaves/tree/master/PulseTools), the tool provided by the author of the PulseWaves format. We can confirm the fields are all parsed correctly. The issues are in the data files, not the tools we use.\n",
     "\n",
     "pulse2pulse -i C:\\Users\\voanh\\Documents\\sp19\\nyu_2451_60462_fwf_plswvs_FD_190511_161348\\10552_NYU_M2_Pulse_Waves_MTA_Resolved-Scanner1-190511_161348_1-originalpoints.pls -keep_time 576832.384516 576832.384518 -o pls0.txt \n",
     "\n",
@@ -613,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The point cloud returns do not line up with the waveform peaks. It seems the georeferecing issues affect the PulseWaves data but not the point clouds."
+    "The point cloud returns do not line up with the waveform peaks. It seems that the georeferencing issues affect the PulseWaves data but not the point clouds."
    ]
   },
   {
@@ -626,7 +626,7 @@
     "\n",
     "1. Time encoding is different in the waveform files and the point cloud files.\n",
     "\n",
-    "2. The pulses are not georeferenced correctly."
+    "2. The pulses are not georeferenced correctly because of the incorrect values of `duration from anchor`."
    ]
   }
  ],
