--- a/notebooks/06_fwf_pc_alignment.ipynb
+++ b/notebooks/06_fwf_pc_alignment.ipynb
@@ -447,7 +447,7 @@
     "\n",
     "Triple check the file parsing using [PulseTools](https://github.com/PulseWaves/PulseWaves/tree/master/PulseTools), the tool provided by the author of the PulseWaves format. We can confirm the fields are all parsed correctly. The issues are in the data files, not the tools we use.\n",
     "\n",
-    "pulse2pulse -i C:\\Users\\voanh\\Documents\\sp19\\nyu_2451_60462_fwf_plswvs_FD_190511_161348\\10552_NYU_M2_Pulse_Waves_MTA_Resolved-Scanner1-190511_161348_1-originalpoints.pls -keep_time 576832.384516 576832.384518 -o pls0.txt \n",
+    "pulse2pulse -i 10552_NYU_M2_Pulse_Waves_MTA_Resolved-Scanner1-190511_161348_1-originalpoints.pls -keep_time 576832.384516 576832.384518 -o pls0.txt \n",
     "\n",
     "```\n",
     "file_signature:         PulseWavesPulse\n",
